Revert "End of shift. Need to fix arrows."
This reverts commit 9f6c3be7ac6d5e049967848900416f2ee08ea2e1.

--- a/client/src/components/relatedItems/relatedItemsLight.module.css
+++ b/client/src/components/relatedItems/relatedItemsLight.module.css
@@ -1,30 +1,27 @@
-a {
-  text-decoration: none;
-}
-
-.related {
-  margin: 3em, 4em;
-}
-
 .testBanner {
   margin: 1%;
   color: rgb(124, 93, 34);
+  background-color: lightsalmon;
+}
+
+.related {
+  border: 4px dashed brown;
 }
 
 .relatedCarousel {
-  margin: 2px;
-  position: relative;
+  border: 2px dashed rgb(80, 24, 24);
+  margin: 2px
 }
 
 .scroller {
   align-content: center;
   display: flex;
-  /* flex-direction: row; */
+  flex-direction: row;
   justify-content: space-evenly;
   overflow: hidden;
 }
 
-.arrow#right {
+.arrow {
   /* display: flex; */
   margin: 10% 0%;
   /* line-height: 40%; */
@@ -32,23 +29,6 @@ a {
   width: auto;
   height: fit-content;
   border-radius: 50%;
-  position: absolute;
-  bottom: 20%;
-  right: 1.5%;
-  z-index: 2;
-}
-.arrow#left {
-  /* display: flex; */
-  margin: 10% 0%;
-  /* line-height: 40%; */
-  background-color: grey;
-  width: auto;
-  height: fit-content;
-  border-radius: 50%;
-  position: absolute;
-  bottom: 20%;
-  right: 1.5%;
-  z-index: 2;
 }
 
 .arrow:hover {
@@ -59,21 +39,20 @@ a {
   border: .20em inset rgb(232, 245, 158);
   background-color: rgb(79, 102, 124);
   margin: .1em;
-  /* display: flex;
-  flex-direction: column; */
-  position: relative;
+  display: flex;
+  flex-direction: column;
+
   /* justify-content: center; */
   align-items: right;
   width: 14em;
-  height: 24em;
+  height: 28em;
 }
 
 .name {
   /* display: flex; */
-  color:rgb(0, 0, 0);
   text-align: right;
-  font: 500 medium sans-serif;
-  margin: 0 .25em .25em;
+  font: 600 medium sans-serif;
+  margin: .5em .25em .25em;
 }
 
 .categoryValue {
@@ -84,7 +63,7 @@ a {
 }
 
 .category {
-  font: small-caps 300 x-small sans-serif;
+  font: 300 x-small sans-serif;
   white-space: pre;
   color: darkgrey;
   text-align: right;
@@ -94,38 +73,25 @@ a {
 .thumbnail {
   height: auto;
   width: auto;
+  min-width: 60%;
   max-width: 75%;
-  max-height: 200px;
-  margin: 0 .75em;
+  min-height: 50%;
+  max-height: 66%;
+  margin: .2em;
 }
 
-.footer {
-  margin: .1em;
-  position: absolute;
-  bottom: 0;
-}
 .price {
-  text-align: left;
+  text-align: right;
   margin: .2em;
-  color:rgb(0, 0, 0);
-  font-weight: 400;
-  font-size: 1.25em;
-  font-style: italic;
-  position: absolute;
-  bottom: 15%;
-  left: 4%;
 }
 
 .stars {
-  text-align: left;
+  text-align: right;
   margin: .2em;
-  color:rgb(0, 0, 0);
-  position: absolute;
-  bottom: .5%;
-  left: .5%;
 }
 
 .outfitCarousel {
+  border: 2px dashed rgba(224, 88, 88, 0.507);
   margin: 2px
 }
 
@@ -168,7 +134,7 @@ a {
   height: 2em;
   font-size: small;
   text-align: right;
-  margin: .25em;
+  margin: .2em;
   z-index: 1;
 }
 
